--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 amqp==5.1.1
+anyio==3.6.2
 apturl==0.5.2
 asgiref==3.5.2
 bcrypt==3.2.0
@@ -8,26 +9,34 @@ Brlapi==0.8.3
 celery==5.2.7
 certifi==2020.6.20
 chardet==4.0.0
+cliapp==1.20180812.1
 click==8.0.3
 click-didyoumean==0.3.0
 click-plugins==1.1.1
 click-repl==0.2.0
+cmdtest==0.32+git
 colorama==0.4.4
 command-not-found==0.3
+configobj==5.0.6
 cryptography==3.4.8
 cupshelpers==1.0
 dbus-python==1.2.18
+decouple==0.0.7
 defer==1.0.6
 distro==1.7.0
 distro-info===1.1build1
 Django==4.1.3
 duplicity==0.8.21
+fastapi==0.86.0
 fasteners==0.14.1
+Flask==2.2.2
 future==0.18.2
 httplib2==0.20.2
 idna==3.3
 importlib-metadata==4.6.4
+itsdangerous==2.1.2
 jeepney==0.7.1
+Jinja2==3.1.2
 keyring==23.5.0
 kombu==5.2.4
 language-selector==0.1
@@ -38,7 +47,8 @@ lockfile==0.12.2
 louis==3.20.0
 macaroonbakery==1.3.1
 Mako==1.1.3
-MarkupSafe==2.0.1
+Markdown==3.3.6
+MarkupSafe==2.1.1
 monotonic==1.6
 more-itertools==8.10.0
 netifaces==0.11.0
@@ -49,9 +59,12 @@ pexpect==4.8.0
 Pillow==9.0.1
 prompt-toolkit==3.0.32
 protobuf==3.12.4
+psutil==5.9.0
 ptyprocess==0.7.0
 pycairo==1.20.1
 pycups==2.0.1
+pydantic==1.10.2
+Pygments==2.11.2
 PyGObject==3.42.1
 PyJWT==2.3.0
 pymacaroons==0.13.0
@@ -61,6 +74,7 @@ pyRFC3339==1.1
 python-apt==2.3.0+ubuntu2.1
 python-dateutil==2.8.1
 python-debian===0.1.43ubuntu1
+python-dotenv==0.21.0
 pytz==2022.1
 pyxdg==0.27
 PyYAML==5.4.1
@@ -68,8 +82,13 @@ reportlab==3.6.8
 requests==2.25.1
 SecretStorage==3.3.1
 six==1.16.0
+sniffio==1.3.0
 sqlparse==0.4.3
+starlette==0.20.4
 systemd-python==234
+terminator==2.1.1
+ttystatus==0.38
+typing_extensions==4.4.0
 ubuntu-advantage-tools==27.11.2
 ubuntu-drivers-common==0.0.0
 ufw==0.36.1
@@ -79,6 +98,7 @@ usb-creator==0.3.7
 vine==5.0.0
 wadllib==1.3.6
 wcwidth==0.2.5
+Werkzeug==2.2.2
 xdg==5
 xkit==0.0.0
 zipp==1.0.0
